--- a/package.json
+++ b/package.json
@@ -18,12 +18,13 @@
     "@types/express": "4.17.0",
     "@types/i18next": "12.1.0",
     "@types/i18next-sprintf-postprocessor": "0.0.29",
+    "del": "5.1.0",
     "express": "4.17.1",
     "gulp": "4.0.2",
-    "del": "5.1.0",
-    "ts-node": "5.0.1",
-    "typescript": "3.6.3",
+    "gulp-install": "^1.1.0",
     "nodemon": "1.19.2",
-    "tslint": "5.20.0"
+    "ts-node": "5.0.1",
+    "tslint": "5.20.0",
+    "typescript": "3.6.3"
   }
 }
