--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,10 +8,10 @@
     "moduleResolution": "node",
     "rootDir": "lambda",
     "outDir": "dist",
-    "sourceMap": false,
+    "sourceMap": true,
     "allowJs": false,
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
+    "noImplicitAny": false,
+    "noUnusedLocals": false,
     "noImplicitThis": true,
     "strictNullChecks": true,
     "noImplicitReturns": true,
